<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/signIn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:src="@drawable/imdb" />


    <EditText
        android:id="@+id/email_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_imageView"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/imdb_black"
        android:hint="@string/email_et"
        android:inputType="textEmailAddress"
        android:paddingBottom="40dp"
        android:textColor="@color/imdb_black"
        android:textColorHint="@color/imdb_black" />


    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_editText"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/imdb_black"
        android:hint="@string/password_et"
        android:inputType="textPassword"
        android:paddingBottom="40dp"
        android:textColor="@color/imdb_black"
        android:textColorHint="@color/imdb_black" />


    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/signUp_button"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/imdb_yellow"
        android:padding="12dp"
        android:text="@string/signIn_btn"
        android:onClick="onNavigateToHome"
        android:textColor="@color/imdb_black" />

    <Button
        android:id="@+id/signUp_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/imdb_black"
        android:onClick="onNavigateToSignUp"
        android:padding="12dp"
        android:text="@string/signUp_btn"
        android:textColor="@color/imdb_yellow" />

</RelativeLayout>
